fixing modal issue on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -471,7 +471,7 @@ body.section-0 #map { opacity:0.5; }
     height: 100%;
 }
 
-/*.formWrapper{
+.formWrapper{
     position: relative;
     padding-top: 25px;
     height: 100%;
@@ -483,7 +483,7 @@ body.section-0 #map { opacity:0.5; }
     left: 0;
     width: 100%;
     height: 100%;
-}*/
+}
 
 @media (max-width:640px) {
     body{
@@ -496,10 +496,11 @@ body.section-0 #map { opacity:0.5; }
         line-height:16px;
     }
 
-/*    .formWrapper{
+    .formWrapper{
         -webkit-overflow-scrolling: touch;
-        max-height: 480px ;
-    }*/
+/*        max-height: 480px ;*/
+        padding-bottom: 20%;
+    }
 
     #modal-trigger{
         top: 80%!important;
